# Practice-Projects

./: README.md
COEN 6761 Assignment 1 - Testing/: .coverage  README.md  run_tests.sh
COEN 6761 Assignment 1 - Testing/data/: test_cases.csv
COEN 6761 Assignment 1 - Testing/src/: course_schedule.py  rand.py
COEN 6761 Assignment 1 - Testing/tests/: test_course_schedule.py
MNIST Classification with Pytorch/: README.md  tut.ipynb
cpp-interview-example/: CMakeLists.txt  README.md
cpp-interview-example/include/: Frame.h  GrayscaleProcessor.h  IFrameProcessor.h
cpp-interview-example/src/: GrayscaleProcessor.cpp  main.cpp
face-detection/: README.md  main.py
face-recognition/: README.md  recognize.py  requirements.txt
merge-pdf/: README.md  merge.ipynb
pytorch-practice/: README.md  cifar_net.pth  example.ipynb
